--- a/pricing.html
+++ b/pricing.html
@@ -123,7 +123,7 @@ title: Eleventy Title from Data
                 </div>
             </div>
             <p style="text-align: center;">Need more? <a title="Contact" href="/contact/">Contact Us</a> for a custom plan</p>
-            <div class="signup center"><a class="btn btn-large btn-primary" href="https://be.exceptionless.io/signup?domain=www.codesmithtools.com&amp;type=referral">Sign Up For <strong>FREE</strong> Now!</a></div>
+            <div class="signup center"><a class="btn btn-large btn-primary" href="https://be.exceptionless.io/signup?domain=www.codesmithtools.com&type=referral">Sign Up For <strong>FREE</strong> Now!</a></div>
             <div class="row" style="margin-top: 5px;">
                 <div id="pricing-faq" class="span6">
                     <h4 style="margin-top: 15px;">Frequently Asked Questions</h4>
