--- a/tour.html
+++ b/tour.html
@@ -120,7 +120,7 @@ title: Eleventy Title from Data
                 </div>
             </div>
             <hr>
-            <div class="signup center"><a class="btn btn-large btn-primary" href="https://be.exceptionless.io/signup?domain=www.codesmithtools.com&amp;type=referral">Sign Up For <strong>FREE</strong> Now!</a></div>
+            <div class="signup center"><a class="btn btn-large btn-primary" href="https://be.exceptionless.io/signup?domain=www.codesmithtools.com&type=referral">Sign Up For <strong>FREE</strong> Now!</a></div>
         </div>
 
     </div><!-- /#content -->
