--- a/content/why.html
+++ b/content/why.html
@@ -130,9 +130,8 @@ layout: default
 
     <div id="content" class="row-fluid">
 
-
         <div id="main" class="span12" role="main">
-            <p><script>// <![CDATA[
+            <script>
             var start = new Date(2015, 10, 11);
             var rate = 23 / 1000;
             var base = 150000000;
@@ -150,11 +149,9 @@ layout: default
                 var cans = addCommas(Math.floor((new Date() - start) * rate) + base);
                 jQuery("#cans").html(cans);
             }, 250);
-            // ]]&gt;</script></p>
-            <div class="span6"><img data-attachment-id="13594" data-permalink="/home/codesmith-client-logo-bar-left/" data-orig-file="/assets/img/codesmith-client-logo-bar-left.png" data-orig-size="588,150" data-comments-opened="1" data-image-meta="{&quot;aperture&quot;:&quot;0&quot;,&quot;credit&quot;:&quot;&quot;,&quot;camera&quot;:&quot;&quot;,&quot;caption&quot;:&quot;&quot;,&quot;created_timestamp&quot;:&quot;0&quot;,&quot;copyright&quot;:&quot;&quot;,&quot;focal_length&quot;:&quot;0&quot;,&quot;iso&quot;:&quot;0&quot;,&quot;shutter_speed&quot;:&quot;0&quot;,&quot;title&quot;:&quot;&quot;,&quot;orientation&quot;:&quot;0&quot;}" data-image-title="codesmith-client-logo-bar-left" data-image-description="<p>Exceptionless Customers & Users</p>
-" data-medium-file="/assets/img/codesmith-client-logo-bar-left-300x77.png" data-large-file="/assets/img/codesmith-client-logo-bar-left.png" loading="lazy" class="aligncenter size-full wp-image-13594" src="/assets/codesmith-client-logo-bar-left.png" alt="Exceptionless Customers & Users" width="588" height="150" data-id="13594" srcset="/assets/codesmith-client-logo-bar-left.png 588w, /assets/codesmith-client-logo-bar-left-300x77.png 300w" sizes="(max-width: 588px) 100vw, 588px"></div>
-            <div class="span6 smaller"><img data-attachment-id="13593" data-permalink="/home/codesmith-client-logo-bar-right/" data-orig-file="/assets/img/codesmith-client-logo-bar-right.png" data-orig-size="582,150" data-comments-opened="1" data-image-meta="{&quot;aperture&quot;:&quot;0&quot;,&quot;credit&quot;:&quot;&quot;,&quot;camera&quot;:&quot;&quot;,&quot;caption&quot;:&quot;&quot;,&quot;created_timestamp&quot;:&quot;0&quot;,&quot;copyright&quot;:&quot;&quot;,&quot;focal_length&quot;:&quot;0&quot;,&quot;iso&quot;:&quot;0&quot;,&quot;shutter_speed&quot;:&quot;0&quot;,&quot;title&quot;:&quot;&quot;,&quot;orientation&quot;:&quot;0&quot;}" data-image-title="codesmith-client-logo-bar-right" data-image-description="<p>Exceptionless Users & Customers</p>
-" data-medium-file="/assets/img/codesmith-client-logo-bar-right-300x77.png" data-large-file="/assets/img/codesmith-client-logo-bar-right.png" loading="lazy" class="aligncenter size-full wp-image-13593" src="/assets/codesmith-client-logo-bar-right.png" alt="Exceptionless Users & Customers" width="582" height="150" data-id="13593" srcset="/assets/codesmith-client-logo-bar-right.png 582w, /assets/codesmith-client-logo-bar-right-300x77.png 300w" sizes="(max-width: 582px) 100vw, 582px"></div>
+            </script>
+            <div class="span6"><img class="aligncenter size-full" src="/assets/img/codesmith-client-logo-bar-left.png" alt="Exceptionless Customers &amp; Users" width="588" height="150" srcset="/assets/img/codesmith-client-logo-bar-left.png 588w, /assets/img/codesmith-client-logo-bar-left-300x77.png 300w" sizes="(max-width: 588px) 100vw, 588px"></div>
+            <div class="span6"><img class="aligncenter size-full" src="/assets/img/codesmith-client-logo-bar-right.png" alt="Exceptionless Users & Customers" width="582" height="150" srcset="/assets/img/codesmith-client-logo-bar-right.png 582w, /assets/img/codesmith-client-logo-bar-right-300x77.png 300w" sizes="(max-width: 582px) 100vw, 582px"></div>
             <div class="span6" style="clear: both;">
                 <h1 style="margin-bottom: 20px;">Why Exceptionless?</h1>
                 <h2 style="font-size: 24px; margin-bottom: 0;"><i class="icon-user icon-large" style="margin-right: 20px; color: #999;"></i><strong>You’re Losing Users</strong>, Leads, and Customers</h2>
@@ -176,7 +173,7 @@ layout: default
                 <ul>
                     <li style="list-style-type: none;"><i class="icon-dashboard icon-large" style="margin-right: 20px;"></i><strong>Detailed</strong> Dashboard</li>
                     <li style="list-style-type: none;"><i class="icon-group icon-large" style="margin-right: 20px;"></i><strong>Unlimited</strong> Users per Organization</li>
-                    <li style="list-style-type: none;"><i class=" icon-cloud-download icon-large" style="margin-right: 20px;"></i><strong>Easy & Fast</strong> Setup</li>
+                    <li style="list-style-type: none;"><i class="icon-cloud-download icon-large" style="margin-right: 20px;"></i><strong>Easy & Fast</strong> Setup</li>
                     <li style="list-style-type: none;"><i class="icon-bullhorn icon-large" style="margin-right: 20px;"></i>Event <strong>Notifications</strong></li>
                     <li style="list-style-type: none;"><i class="icon-ok icon-large" style="margin-right: 20px;"></i><strong>Mark Events</strong> as Fixed or Critical</li>
                     <li style="list-style-type: none;"><i class="icon-search icon-large" style="margin-right: 20px;"></i><strong>Monitor</strong> Fixed Events for Regression</li>
