Get the slider working

--- a/content/index.html
+++ b/content/index.html
@@ -106,8 +106,8 @@ layout: default
     </div><!-- /#content -->
 </div><!-- /#wrap -->
 
-<script defer src="/assets/cyclone-slider-pro/jquery.easing.1.3.js" id="jquery-easing-js"></script>
-<script defer src="/assets/cyclone-slider-pro/libs/cycle2/jquery.cycle2.min.js" id="jquery-cycle2-js"></script>
-<script defer src="/assets/cyclone-slider-pro/libs/cycle2/jquery.cycle2.swipe.min.js" id="jquery-cycle2-swipe-js"></script>
-<script defer src="/assets/cyclone-slider-pro/templates/standard/script.js" id="cyclone-template-script-standard-js"></script>
-<script defer src="/assets/cyclone-slider-pro/js/client.js" id="cyclone-client-js"></script>
+<script src="/assets/cyclone-slider-pro/jquery.easing.1.3.js" id="jquery-easing-js"></script>
+<script src="/assets/cyclone-slider-pro/libs/cycle2/jquery.cycle2.min.js" id="jquery-cycle2-js"></script>
+<script src="/assets/cyclone-slider-pro/libs/cycle2/jquery.cycle2.swipe.min.js" id="jquery-cycle2-swipe-js"></script>
+<script src="/assets/cyclone-slider-pro/templates/standard/script.js" id="cyclone-template-script-standard-js"></script>
+<script src="/assets/cyclone-slider-pro/js/client.js" id="cyclone-client-js"></script>
