Replace some of the contact us links

--- a/content/pricing.html
+++ b/content/pricing.html
@@ -111,7 +111,7 @@ title: Pricing Plans
             </div>
         </div>
     </div>
-    <p style="text-align: center;">Need more? <a title="Contact" href="/contact/">Contact Us</a> for a custom plan</p>
+    <p style="text-align: center;">Need more? <a title="Contact" href="javascript:Intercom('showNewMessage');">Contact Us</a> for a custom plan</p>
     <div class="signup center"><a class="btn btn-large btn-primary" href="https://be.exceptionless.io/signup?domain=www.codesmithtools.com&type=referral">Sign Up For <strong>FREE</strong> Now!</a></div>
     <div class="row" style="margin-top: 5px;">
         <div id="pricing-faq" class="span6">
@@ -146,7 +146,7 @@ title: Pricing Plans
                     <li>No credit card required.</li>
                 </ul>
                 <h4>Additional Questions?</h4>
-                <p><a href="mailto:sales@exceptionless.com">Contact us</a> and we’ll be happy to help.</p>
+                <p><a href="javascript:Intercom('showNewMessage');">Contact us</a> and we’ll be happy to help.</p>
             </div>
         </div>
     </div>
