--- a/content/why.html
+++ b/content/why.html
@@ -184,7 +184,7 @@ layout: default
             </div>
             <div style="clear: both; height: 0;"></div>
             <div class="signup center" style="margin-top: 20px;"><a class="btn btn-large btn-primary" href="https://be.exceptionless.io/signup?domain=www.codesmithtools.com&type=referral">Sign Up For <strong>FREE</strong> Now!</a></div>
-            <p style="text-align: center;">or <a href="/contact/">contact us</a> with any questions you might have</p>
+            <p style="text-align: center;">or <a href="javascript:Intercom('showNewMessage');">contact us</a> with any questions you might have</p>
         </div>
 
     </div><!-- /#content -->
