Fixed code blocks, spelling... quotes and <>

--- a/content/why.html
+++ b/content/why.html
@@ -161,10 +161,10 @@ layout: default
                 <h2 style="font-size: 24px; margin: 20px 0 0 0;"><i class="icon-star icon-large" style="margin-right: 20px; color: #999;"></i>Be <i><strong>That</strong></i> Company</h2>
                 <p>You know <em><strong>that</strong> </em>company. The one <strong>everyone loves</strong> because their systems, website, applications, tools, etc<strong> just work!</strong> You want to be those guys, and Exceptionless can help you get there by helping make sure the code powering your services is <strong>error free!</strong></p>
             </div>
-            <div class="span6 quote smaller" style="line-height: 44px; color: #bbb; padding: 50px 50px 0 50px; text-align: center; box-sizing: border-box;">“Exceptionless is <strong>awesome</strong>. I’ve <strong>STOPPED</strong> worrying about whether I’m losing customers to bugs I don’t know about.” – <strong>Eric B</strong></div>
+            <div class="span6 quote smaller" style="line-height: 44px; color: #bbb; padding: 50px 50px 0 50px; text-align: center; box-sizing: border-box;">"Exceptionless is <strong>awesome</strong>. I’ve <strong>STOPPED</strong> worrying about whether I’m losing customers to bugs I don’t know about." – <strong>Eric B</strong></div>
             <div style="clear: both; height: 0;"></div>
             <div style="margin: 30px 0; background: #333; width: 100%; color: #fff; clear: both; font-size: 30px; box-sizing: border-box; line-height: 34px; text-align: center; font-weight: bold; padding: 30px 30px 25px 30px;"><span id="cans" style="font-size: 50px; color: #78b001;">3,711,629,930</span> EVENTS, AND COUNTING… <span style="font-weight: normal;">  //  </span> 9700+ ACTIVE PROJECTS</div>
-            <div class="span6 quote smaller" style="line-height: 44px; color: #bbb; padding: 40px 50px; text-align: center; box-sizing: border-box;">“Exceptionless allows us to <strong>prioritize fixes smarter</strong> by showing frequently occurring errors. In <strong>real time!</strong>”<br>
+            <div class="span6 quote smaller" style="line-height: 44px; color: #bbb; padding: 40px 50px; text-align: center; box-sizing: border-box;">"Exceptionless allows us to <strong>prioritize fixes smarter</strong> by showing frequently occurring errors. In <strong>real time!</strong>"<br>
                 – Ryan H.</div>
             <div class="span6">
                 <h2>Make Developer Life Easier</h2>
