Fixing some broken links

--- a/content/tour.html
+++ b/content/tour.html
@@ -28,14 +28,13 @@ title: Feature Tour
                 <li>How can I reproduce this issue?</li>
             </ul>
             <p>By default, these exception reports include type of error, message, stack trace, occurrence date, request information, and environment information. You can also <strong>easily add your own information to reports</strong> with Custom Objects.</p>
-            <p>Learn more about our <a title="Detailed Error Reports – What’s Included?" href="/whats-included-exceptionless-detailed-error-reports/">Detailed Error Reports</a>.</p>
         </div>
     </div>
     <hr>
     <div class="row">
         <div class="span7">
             <h2>Custom Objects</h2>
-            <p>Exceptionless automatically tracks a lot of the contextual information about an error that will <a href="/bug-tracking/">help you fix the bug fast</a>. But what if you want to <strong>track even more information</strong>, like the order information that the user was in the process of submitting, or any other contextual information useful in figuring out when and where the error happened?</p>
+            <p>Exceptionless automatically tracks a lot of the contextual information about an error that will <a href="/docs/getting-started/">help you fix the bug fast</a>. But what if you want to <strong>track even more information</strong>, like the order information that the user was in the process of submitting, or any other contextual information useful in figuring out when and where the error happened?</p>
             <p class="lead" style="margin-bottom: 5px;"><strong>Easily add any custom objects</strong> to your error report and then treat them as <strong>first class citizens</strong> within the error details.</p>
             <p>You can even <strong>promote your custom objects to top level tabs</strong> and customize how the information is displayed using custom templates.</p>
         </div>
@@ -51,7 +50,7 @@ title: Feature Tour
         <div class="span7">
             <h2>Intelligent Error Grouping</h2>
             <p>Errors are organized into stacks based on <strong>where the error occurred </strong>in the code and the type of the error. Exceptionless lets you easily see what information it used to create a stack. It also shows you the <strong>full history</strong> of the error and lets you dive into specific error occurrences.</p>
-            <p>Learn why and how we <a title="Intelligent App Error Grouping Helps Organize Your Exceptions" href="/intelligent-app-error-grouping-helps-organize-exceptions/">group your app errors</a>.</p>
+            <p>Learn why and how we <a title="Intelligent App Error Grouping Helps Organize Your Exceptions" href="/docs/managing-stacks/">group your app errors</a>.</p>
         </div>
     </div>
     <hr>
@@ -59,9 +58,9 @@ title: Feature Tour
         <div class="span7">
             <h2>Most Frequent Errors</h2>
             <p>Exceptionless gives you <strong>great insight into your application</strong> by showing your applications most frequent errors. This gives you the ability to <strong>quickly prioritize</strong> which errors you should fix first.</p>
-            <blockquote><p><a style="color: #f27f1e !important;" href="http://www.microsoft.com/mscorp/execmail/2002/10-02customers.mspx" target="_blank" rel="noopener"><br>
+            <blockquote><p><div style="color: #f27f1e !important;"><br>
                 About 20 percent of the bugs cause 80 percent of all errors, and–this is stunning to me–one percent of bugs cause half of all errors.<br>
-            </a></p></blockquote>
+            </div></p></blockquote>
             <p>Exceptionless <strong>shows you what bugs are effecting your user base</strong> and allows you to <strong>take action</strong>!</p>
         </div>
         <div class="span5">
@@ -78,7 +77,7 @@ title: Feature Tour
             <p>Exceptionless sends email notifications based on your notification settings. You can choose to receive notifications every time an error happens, only when new errors happen, or never.</p>
             <p class="lead" style="margin-bottom: 5px;">Get notified about critical issues as they happen.</p>
             <p>You can also choose to be <strong>notified when errors have been marked as fixed but then regress</strong>.</p>
-            <p>Learn more about our <a title="Receive Error Notifications from Your App via Email" href="/app-error-notifications/">Error Reporting Email Notifications</a>.</p>
+            <p>Learn more about our <a title="Receive Error Notifications from Your App via Email" href="/docs/notifications/">Error Reporting Email Notifications</a>.</p>
         </div>
     </div>
     <hr>
@@ -86,7 +85,7 @@ title: Feature Tour
         <div class="span7">
             <h2>Fluent API</h2>
             <p>The Exceptionless client includes a <strong>fluent API for sending manual error reports and events with detailed information</strong> attached to them. Easily add custom objects, tags, and other information. You can also mark specific errors as being critical.</p>
-            <p><a title="Exceptionless 2.0 API Documentation" href="https://github.com/exceptionless/Exceptionless/wiki">API Documentation</a></p>
+            <p><a title="Exceptionless 2.0 API Documentation" href="/docs/api/api-getting-started/">API Documentation</a></p>
         </div>
         <div class="span5">
             <div class="thumb thumb-right"><a class="fancybox image" href="/assets/img/toexceptionless1.png" rel="tour"><img class="alignnone size-full wp-image-148 thumb" src="/assets/img/toexceptionless1.png" alt="Fluent API" width="560" height="280" data-id="148" srcset="/assets/img/toexceptionless1.png 560w, /assets/img/toexceptionless1-300x150.png 300w" sizes="(max-width: 560px) 100vw, 560px"></a></div>
