--- a/content/search.html
+++ b/content/search.html
@@ -6,22 +6,22 @@ title: Search Results
     <h1>Results</h1>
 </div>
 <div id="wrap" class="container" role="document">
-  <div id="responsive-menu"><button class='btn btn-primary' onclick='handleMenu()'>Table of Contents</button></div>
+  <div id="responsive-menu"><button class="btn btn-primary" onclick="handleMenu()">Table of Contents</button></div>
   <div id="content" class="row-fluid">
     <div class="toc well span3 visible-toc">
-      <div style='display: flex; flex-direction: row; align-items: space-between; justify-content: space-between;'>
-        <input type='text' id='search-input' placeholder="Search docs" /><br/>        
-        <button style='width: 40% margin: auto; margin-left: 5px;' class='btn-primary' onclick='handleSearch()'>Search</button>
+      <div style="display: flex; flex-direction: row; align-items: space-between; justify-content: space-between;">
+        <input type="text" id="search-input" placeholder="Search docs" /><br/>        
+        <button style="width: 40% margin: auto; margin-left: 5px;" class="btn-primary" onclick="handleSearch()">Search</button>
       </div>
       {% include "docs-toc.html" %}
     </div>
-    <div id='main-docs' class="well span9 docs">
+    <div id="main-docs" class="well span9 docs">
       <h1>{{ title }}</h1>
       {{ content | safe }}   
     </div>
-    <div class="well span9 docs" id='search-results' style='display: none;'>
+    <div class="well span9 docs" id="search-results" style="display: none;">
       <h3>Search Results</h3>
-      <div id='results-ul'>
+      <div id="results-ul">
 
       </div>
     </div>
@@ -31,18 +31,18 @@ title: Search Results
 <script>
     document.addEventListener("DOMContentLoaded", async () => {
       //  Listen for enter event
-      const search = document.getElementById('search-input')
-      search.addEventListener('keyup', ({key}) => {
+      const search = document.getElementById("search-input")
+      search.addEventListener("keyup", ({key}) => {
         if (key === "Enter") {
           handleSearch();
         }
       })
       //  Get the search term from the url
       const parsedSearchTerm = decodeURI(window.location.href.split("=")[1]);
-      const docsContainer = document.getElementById('main-docs');
-      docsContainer.style.display = 'none';
-      const resultsContainer = document.getElementById('search-results');
-      resultsContainer.style.display = 'block';
+      const docsContainer = document.getElementById("main-docs");
+      docsContainer.style.display = "none";
+      const resultsContainer = document.getElementById("search-results");
+      resultsContainer.style.display = "block";
       const res = await fetch(`${window.location.origin}/assets/index.json`);
       const data = await res.json();
       const keys = Object.keys(data);
@@ -56,19 +56,19 @@ title: Search Results
       const filtered = uniqueDocs.filter((doc) => doc.title.includes(parsedSearchTerm) || doc.content.includes(parsedSearchTerm));
 
       for(const item of filtered) {
-        const newItem = document.createElement('p');
-        const anchor = document.createElement('a');
-        const summary = document.createElement('span');
-        const path = item.path.split('./content/')[1].split('.')[0]
-        anchor.setAttribute('href', `${window.location.origin}/${path}`);
-        anchor.style.cursor = 'pointer';
+        const newItem = document.createElement("p");
+        const anchor = document.createElement("a");
+        const summary = document.createElement("span");
+        const path = item.path.split("./content/")[1].split(".")[0]
+        anchor.setAttribute("href", `${window.location.origin}/${path}`);
+        anchor.style.cursor = "pointer";
         anchor.innerText = item.title;
 
         newItem.appendChild(anchor);   
 
         const searchIndex = item.content.search(parsedSearchTerm);    
 
-        const searchArray = item.content.split(' ');
+        const searchArray = item.content.split(" ");
         const searchArrayIndex = searchArray.indexOf(parsedSearchTerm);
         
         let previewText = "No preview available";
@@ -82,7 +82,7 @@ title: Search Results
               updatedWordsToDisplay.push(word);
             }
           }
-          previewHtml = `<p>...${updatedWordsToDisplay.join(' ')}...</p>`
+          previewHtml = `<p>...${updatedWordsToDisplay.join(" ")}...</p>`
         }
         summary.innerHTML = previewHtml;
         newItem.appendChild(summary);
@@ -91,12 +91,12 @@ title: Search Results
       }
     });
     
-    const ul = document.getElementById('results-ul');
+    const ul = document.getElementById("results-ul");
     let updatedWordsToDisplay = [];
     const handleMenu = () => {
-        const menu = document.querySelector('.toc');
-        menu.classList.toggle('hidden-toc');
-        menu.classList.toggle('visible-toc');
+        const menu = document.querySelector(".toc");
+        menu.classList.toggle("hidden-toc");
+        menu.classList.toggle("visible-toc");
     }
 
     const clearResults = async () => {
@@ -112,7 +112,7 @@ title: Search Results
     }
 
     const handleSearch = async () => {
-      const searchTerm = document.getElementById('search-input').value;
+      const searchTerm = document.getElementById("search-input").value;
       const queryString = encodeURI(searchTerm)
       window.location.replace(`/search?term=${queryString}`);
     }
