Updated Event Exclusions, Fixed typos and markdown linting errors.

--- a/content/tour.html
+++ b/content/tour.html
@@ -6,8 +6,8 @@ title: Feature Tour
     <div class="row">
         <div class="span7">
             <h2>Dashboard</h2>
-            <p>The dashboard provides a beautiful, high level view of your project’s exception and event history. You can quickly <strong>view the health</strong> of your application, <strong>measure end user experience</strong> from real users, and <strong>intelligently view the most frequent and most recent errors</strong> for your application.</p>
-            <p>You will be surprised how helpful a graphical representation of your errors are, whether you’re working with an ASP.NET, Web API, WebForms, WPF, Console, or MVC application. It is especially nice to visualize progress towards eliminating errors.</p>
+            <p>The dashboard provides a beautiful, high level view of your project's exception and event history. You can quickly <strong>view the health</strong> of your application, <strong>measure end user experience</strong> from real users, and <strong>intelligently view the most frequent and most recent errors</strong> for your application.</p>
+            <p>You will be surprised how helpful a graphical representation of your errors are, whether you're working with an ASP.NET, Web API, WebForms, WPF, Console, or MVC application. It is especially nice to visualize progress towards eliminating errors.</p>
         </div>
         <div class="span5">
             <div class="thumb thumb-right"><a class="fancybox image" href="/assets/img/dashboard-2.png" rel="tour"><img class="thumb aligncenter wp-image-12782 size-large" src="/assets/img/dashboard-2-1024x594.png" alt="Exceptionless Dashboard" width="940" height="545" srcset="/assets/img/dashboard-2-1024x594.png 1024w, /assets/img/dashboard-2-300x174.png 300w, /assets/img/dashboard-2.png 1657w" sizes="(max-width: 940px) 100vw, 940px"></a></div>
@@ -20,7 +20,7 @@ title: Feature Tour
         </div>
         <div class="span7">
             <h2>Detailed Error Reports</h2>
-            <p>Exceptionless error reports contain <strong>intelligently organized information</strong> to help you <strong>quickly track down and fix the error</strong>. We guarantee you won’t be stressed out by the usual overwhelming information overload.</p>
+            <p>Exceptionless error reports contain <strong>intelligently organized information</strong> to help you <strong>quickly track down and fix the error</strong>. We guarantee you won't be stressed out by the usual overwhelming information overload.</p>
             <p class="lead" style="margin-bottom: 5px;">You never have to ask the same old questions again.</p>
             <ul>
                 <li>What version are you using?</li>
