--- a/content/why.html
+++ b/content/why.html
@@ -49,7 +49,7 @@ layout: default
     }
 </style>
 <div class="homepage-hero-module" style="height: 400px;">
-    <div class="video-container">
+    <div class="video-container" style="height: 400px; position: relative; overflow: hidden;">
         <div style="text-align:center;font-size: 40px;font-weight:900;padding-top: 125px;position: absolute;z-index: 1020;margin: 0 auto;color: white;line-height: 50px;width: 100%;text-shadow:3px 3px 10px #333;">RETAIN<br>INNOVATE<br>EVOLVE</div>
         <div class="filter" style="width: 1593px;"></div>
         <video autoplay="" loop="" class="fillWidth fadeIn animated" style="width: 100vw;">
